# htap-storage-lsm-tree

./: .gitignore  CMakeLists.txt
.github/workflows/: testing.yml
docs/: chernovik.md  query_language.md  sparse_index.md  sstable_binary.md
include/engine/: storage_engine.hpp
include/executor/: binder.hpp  bound_expression.hpp  bound_statement.hpp  error.hpp  execution_result.hpp  executor.hpp
include/lsmtree/: lsmtree.hpp
include/lsmtree/compaction/: compaction_job.hpp  compaction_policy.hpp  compaction_task.hpp
include/lsmtree/interfaces/: readable_table_interface.hpp
include/lsmtree/mem/: imm_memtable.hpp  imm_memtable_cursor.hpp  memory_cursor.hpp  memory_layer.hpp  memtable.hpp  memtable_cursor.hpp  memtable_interface.hpp
include/lsmtree/mem/cursors/: imm_memtable_cursor.hpp  memory_cursor.hpp  memtable_cursor.hpp  merge_cursor.hpp
include/lsmtree/mem/memtable_realizations/: map_memtable.hpp  memtable_factory.hpp
include/lsmtree/sstable/: column_sst_block_builder.hpp  row_sst_block_builder.hpp  sparse_index_entry.hpp  sst_footer.hpp  sst_format.hpp  sstable_builder.hpp  sstable_info.hpp  sstable_paths.hpp
include/lsmtree/sstable/format/: sparse_index_entry.hpp  sst_layout.hpp  sstable_info.hpp
include/lsmtree/sstable/metadata/: sstable_info.hpp  sstable_manifest.hpp  sstable_registry.hpp
include/lsmtree/sstable/sparse_index/: sparse_index_entry.hpp
include/parser/: ast.hpp  error.hpp  lexer.hpp  parser.hpp  token.hpp
include/storage/: memtable.hpp  row.hpp  schema.hpp  value.hpp
include/storage/api/: config.hpp  cursor_interface.hpp  storage_engine_interface.hpp  types.hpp
include/storage/cursor/: active_memtable_cursor.hpp  chain_cursor.hpp  cursor_factory.hpp  empty_cursor.hpp  immutable_memtable_cursor.hpp  merge_cursor.hpp  sstable_column_cursor.hpp  sstable_row_cursor.hpp
include/storage/lsm/: lsm_storage_engine.hpp
include/storage/lsm_tree/: lsmtree.hpp
include/storage/mock/: mock_cursor.hpp  mock_storage_engine.hpp
include/storage/model/: row.hpp  schema.hpp  schema_builder.hpp  value.hpp
include/storage/read/: data_skipping_filter.hpp
include/storage/read/sstable/: block_meta.hpp  column_block_meta.hpp  data_skipping_block_pruner.hpp  key_range.hpp  linear_block_selector.hpp  linear_column_block_selector.hpp  linear_row_block_selector.hpp  numeric_stats.hpp  row_block_meta.hpp  sparse_block_selector.hpp  sparse_row_block_selector.hpp  sstable_block_cache.hpp  sstable_cursor_factory.hpp  sstable_metadata_cache.hpp  sstable_reader.hpp
include/utils/: binary_writer.hpp  logger.hpp
scripts/: build.sh  clean.sh  coverage.sh  dev.sh  test.sh
src/engine/: storage_engine.cpp
src/executor/: binder.cpp  executor.cpp
src/lsm/mem/: imm_memtable.cpp  imm_memtable_cursor.cpp  memory_cursor.cpp  memory_layer.cpp  memtable.cpp  memtable_cursor.cpp
src/lsm/mem/cursors/: imm_memtable_cursor.cpp  memory_cursor.cpp  memtable_cursor.cpp
src/lsmtree/: lsmtree.cpp
src/lsmtree/compaction/: compaction_job.cpp  compaction_policy.cpp
src/lsmtree/mem/: imm_memtable.cpp  memory_layer.cpp  memtable.cpp
src/lsmtree/mem/cursors/: imm_memtable_cursor.cpp  memtable_cursor.cpp  merge_cursor.cpp
src/lsmtree/mem/memtable_realizations/: map_memtable.cpp  memtable_factory.cpp
src/lsmtree/sstable/: column_sst_block_builder.cpp  row_sst_block_builder.cpp  sstable_builder.cpp
src/lsmtree/sstable/metadata/: sstable_manifest.cpp  sstable_registry.cpp
src/parser/: lexer.cpp  parser.cpp
src/read/sstable/: linear_block_selector.cpp  sstable_reader.cpp
src/storage/cursor/: active_memtable_cursor.cpp  chain_cursor.cpp  cursor_factory.cpp  empty_cursor.cpp  immutable_memtable_cursor.cpp  merge_cursor.cpp  sstable_column_cursor.cpp  sstable_row_cursor.cpp
src/storage/lsm/: lsm_storage_engine.cpp
src/storage/mock/: mock_cursor.cpp  mock_storage_engine.cpp
src/storage/model/: row.cpp  schema.cpp  schema_builder.cpp
src/storage/read/sstable/: data_skipping_block_pruner.cpp  linear_column_block_selector.cpp  linear_row_block_selector.cpp  sparse_block_selector.cpp  sstable_block_cache.cpp  sstable_cursor_factory.cpp  sstable_metadata_cache.cpp  sstable_reader.cpp
src/utils/: binary_writer.cpp
tests/cursor/: active_memtable_cursor_tests.cpp  chain_cursor_tests.cpp  cursor_factory_test.cpp  empty_cursor_tests.cpp  immutable_memtable_cursor_tests.cpp  merge_cursor_tests.cpp  sstable_column_cursor_tests.cpp  sstable_row_cursor_tests.cpp
tests/e2e/: storage_engine_e2e_tests.cpp
tests/executor/: binder_tests.cpp  data_skipping_filter_extraction_tests.cpp  data_skipping_lsm_integration_tests.cpp  global_aggregate_select_tests.cpp  grouped_aggregate_select_tests.cpp  plain_select_tests.cpp
tests/lsm/: lsm_storage_engine_tests.cpp
tests/lsmtree/mem/: imm_memtable_tests.cpp  memory_layer_tests.cpp  memtable_tests.cpp
tests/lsmtree/mem/cursors/: merge_cursor_tests.cpp
tests/lsmtree/mem/memtable_realizations/: map_memtable_tests.cpp
tests/lsmtree/sstable/: sstable_builder_tests.cpp
tests/lsmtree/sstable/metadata/: manifest_roundtrip_tests.cpp  sstable_registry_tests.cpp
tests/lsmtree/sstable/roundtrip/: column_sst_roundtrip_tests.cpp  row_sst_roundtrip_tests.cpp
tests/parser/: lexer_tests.cpp  parser_tests.cpp
tests/read/sstable/: data_skipping_block_pruner_tests.cpp  linear_block_selector_tests.cpp  linear_column_block_selector_test.cpp  linear_column_block_selector_tests.cpp  linear_row_block_selector_tests.cpp  numeric_stats_reader_tests.cpp  sparse_row_block_selector.cpp  sstable_block_cache_tests.cpp  sstable_metadata_cache_tests.cpp
tests/storage/mock/: mock_cursor.cpp  mock_cursor_tests.cpp  mock_storage_engine.cpp  mock_storage_engine_tests.cpp
tests/storage/model/: row_tests.cpp  schema_builder_tests.cpp  schema_tests.cpp
tests/utils/: binary_writer_tests.cpp
